backend/findinberlin-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: findinberlin
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: privileged
