backend/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: findinberlin
  labels:
    app: fib-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fib-backend
  template:
    metadata:
      labels:
        app: fib-backend
    spec:
      containers:
      - name: backend
        image: "ghcr.io/jkulzer/fib-server:v0.0.2"
        ports:
        - name: backend
          protocol: TCP
          containerPort: 3001
        resources:
          requests:
            cpu: 10m
            memory: 3000Mi
          limits:
            memory: 4000Mi
